--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  height: 100vh;
 }
 
 :root {
@@ -55,7 +56,7 @@ body {
 #profile p {
   font-weight: 500;
   line-height: 24px;
-  margin-top: 8px; 
+  margin-top: 8px;
 }
 
 #switch {
@@ -157,4 +158,13 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
