--- a/style.css
+++ b/style.css
@@ -81,11 +81,15 @@ body {
   z-index: 1;
   transform: translateY(-50%);
   top: 50%;
+  animation: slide-back .4s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s  forwards;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--higlight-color) ;
 }
 
 #switch span {
@@ -166,5 +170,23 @@ footer {
   }
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    right: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
